[package]
name = "berryville"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy = "0.10.0"
bevy-trait-query = "0.2.1"
bevy_pixel_camera = "0.4.1"
bevy_kira_audio = { version = "0.15.0", features = [
    "wav",
    "mp3"
]}
image = "0.24.6"
rand = "0.8.5"
wasm-bindgen = "0.2.86"
winit = "0.28.6"
bevy_web_asset = {git = "https://github.com/johanhelsing/bevy_web_asset"}